common.css
/* ... */
a
{
	text-decoration:underline;
	cursor:pointer;
}
body.darkscheme a:hover
{
	text-shadow:0px 0px 3px #fff;
	color:#fff;
}
body.lightscheme  a:hover
{
	text-shadow:0px 0px 3px #111;
	color:#000;
}
body.darkscheme a.unbuyable:hover
{
	text-shadow:0px 0px 3px #fff;
	color:#000;
}
body.lightscheme  a.unbuyable:hover
{
	text-shadow:0px 0px 3px #111;
	color:#fff;
}
.partext
{
	padding:8px;
	-webkit-touch-callout: auto;
	-webkit-user-select: auto;
	-khtml-user-select: auto;
	-moz-user-select: auto;
	-ms-user-select: auto;
	user-select: auto;
}
.faded
{
	opacity:0.9;
}
a:active
{
	opacity:0.8;
}
#indexlinks
{
	margin:15px;
}
.otthercomic1
{
	margin:20px;
	background-image:url('img/otthercomic1.png');
	width:640px;
	height:523px;
}
.otthercomic2
{
	margin:20px;
	background-image:url('img/otthercomic2.png');
	width:676px;
	height:709px;
}
#beach
{
	width:553px;
	height:395px;
	background-size:contain;
	background-repeat:no-repeat;
	background-position:center;
	cursor:pointer;
	border-width: 2px;
	border-style: solid;
	-webkit-transition: opacity 0.1s ease-out,-webkit-transform 0.1s ease-out;
	-moz-transition: opacity 0.1s ease-out,-moz-transform 0.1s ease-out;
	-ms-transition: opacity 0.1s ease-out,-ms-transform 0.1s ease-out;
	-o-transition: opacity 0.1s ease-out,-o-transform 0.1s ease-out;
	transition: opacity 0.1s ease-out,transform 0.1s ease-out;
}
#beach:hover
{
	-webkit-transform:scale(0.99,0.99);opacity:0.9;
	-moz-transform:scale(0.99,0.99);opacity:0.9;
	-ms-transform:scale(0.99,0.99);opacity:0.9;
	-o-transform:scale(0.99,0.99);opacity:0.9;
	transform:scale(0.99,0.99);opacity:0.9;
}
#beach:active
{
	-webkit-transform:scale(0.98,0.98);opacity:1;
	-moz-transform:scale(0.98,0.98);opacity:1;
	-ms-transform:scale(0.98,0.98);opacity:1;
	-o-transform:scale(0.98,0.98);opacity:1;
	transform:scale(0.98,0.98);opacity:1;
}
#beach:hover.flip-horizontal
{
	-webkit-transform:scale(-0.99,0.99);opacity:0.9;
	-moz-transform:scale(-0.99,0.99);opacity:0.9;
	-ms-transform:scale(-0.99,0.99);opacity:0.9;
	-o-transform:scale(-0.99,0.99);opacity:0.9;
	transform:scale(-0.99,0.99);opacity:0.9;
}
#beach:active.flip-horizontal
{
	-webkit-transform:scale(-0.98,0.98);opacity:1;
	-moz-transform:scale(-0.98,0.98);opacity:1;
	-ms-transform:scale(-0.98,0.98);opacity:1;
	-o-transform:scale(-0.98,0.98);opacity:1;
	transform:scale(-0.98,0.98);opacity:1;
}
.npthumb
{
	width:130px;
	height:94px;
	background-size:contain;
	background-repeat:no-repeat;
	background-position:center;
	border-width: 1px;
	border-style: solid;
}
.toolwrapper
{
	min-height:90px;
	max-height:1100px;
	min-width:188px;
	max-width:1100px;
}
#lootNavigation
{
	padding: 10px;
}
#navLimit, #navButtons
{
	display: inline;
	vertical-align: middle;
}
#navButtons, #searchButtons
{
	float: right;
}
#lootSearch
{
	padding: 3px 10px 3px 10px;
}
#searchContainer
{
	display: block;
	overflow: hidden;
	min-width: 50px;
}
#lootSearchBox
{
	width: 100%;
}
#sectionShopBody
{
	padding: 5px;
	height:100px;
	min-height:100px;
	min-width:170px;
}
#clockface {
	background-color:White;
	background-image:url('img/clockface.png');
	width:40px;
	height:40px;
	border-radius:50px;
	z-index:30;
}
#dragonoverviewindexdiv {
	height:100px;
	width:520px;
}
#dragonoverviewmaindiv {
	height:255px;
	width:520px;
}
#storylineButtons {
	width:520px;
	height:40px;
	text-align:center;
}

#storylineText {
	vertical-align:middle;
}

.floatbox{
	display: inline-block;
	vertical-align: top;
	min-height:66px;
	border-width: 1px;
	border-style: solid;
	padding: 4px;
}

body.darkscheme .floatbox:hover {
	border-color:#ddd;
	background-color:#000;
}

body.lightscheme .floatbox:hover {
	border-color:#222;
	background-color:#fff;
}
.lootbox{
	display: inline-block;
	vertical-align: top;
	width:130px;
	min-height:38px;
	margin:5px;
	border-width: 1px;
	border-style: solid;
	overflow:hidden;
	padding: 4px;
}
.minifloatbox{
	display: inline-block;
	vertical-align: top;
	min-width:48px;
	min-height:20px;
	margin:5px;
	border-width: 1px;
	border-style: solid;
	text-align:center;
	padding: 4px;
}
.floatsquare{
	display: inline-block;
	vertical-align: top;
	min-width:80px;
	min-height:48px;
	margin:5px;
	border-width: 1px;
	border-style: solid;
	text-align:center;
	padding: 2px;
}
.infobox
{
	text-align:center;
}
body.darkscheme .infobox
{
	background-color:#111;
}
body.lightscheme .infobox
{
	background-color:#eee;
}
body.darkscheme .sand.shop
{
	background-color:#181818
}
body.lightscheme .sand.shop
{
	background-color:#ddd
}
body.darkscheme .castle.shop
{
	background-color:#222
}
body.lightscheme .castle.shop
{
	background-color:#d8d8d8
}
body.darkscheme .boost.shop
{
	background-color:#282828
}
body.lightscheme .boost.shop
{
	background-color:#c8c8c8
}
body.darkscheme .boost.loot
{
	background-color:#ddd;
	color:#000;
	border-color:#333;
}
body.lightscheme .boost.loot
{
	background-color:#222;
	color:#fff;
	border-color:#ccc;
}
body.darkscheme .boost.loot:hover
{
	background-color:#F5F5F5;
	color:#000;
}
body.lightscheme .boost.loot:hover
{
	background-color:#0b0b0b;
	color:#fff;
}
.badge.shop
{
	border-style:dashed;
}
body.darkscheme .badge.shop
{
	color:#aaa;
	border-color:#222;
}
body.lightscheme .badge.shop
{
	color:#666;
	border-color:#ddd;
}
.badge.shop:hover
{
	border-style:solid;
}
body.darkscheme .badge.shop:hover
{
	color:#ccc;
	background-color:#111;
}
body.lightscheme .badge.shop:hover
{
	color:#333;
	background-color:#eee;
}
body.darkscheme .badge.shop h1
{
	color:#333;
}
body.lightscheme .badge.shop h1
{
	color:#ccc;
}
body.darkscheme .badge.loot
{
	border-color:#ccc;
	color:#eee;
}
body.lightscheme .badge.loot
{
	border-color:#333;
	color:#111;
}
body.darkscheme .badge.loot:hover
{
	background-color:#222;
	border-color:#ccc;
}
body.lightscheme .badge.loot:hover
{
	background-color:#ddd;
	border-color:#333;
}
body.darkscheme .badge.loot h1
{
	color:#999;
}
body.lightscheme .badge.loot h1
{
	color:#777;
}
.selectedBox
{
	border-width:2px;
}
.hidden
{
	display:none;
}
/* ... */

